--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -92,7 +92,7 @@
     <div class="row">
       <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly/>
+        <input type="text" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly hidden/>
         <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" >
       </div>
       <div class="col">
@@ -144,12 +144,16 @@
       </div>
       <div class="col" >
 		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
-        <select name="gender" class="form-control" required="required" id="gender" class="gender" >
+       <select onchange="changeDropdown(this.value);" name="gender" class="form-control" required="required" id="gender" class="gender">
           {% if animal.gender == 'male' %}
             <option value="male" selected >Male</option>
+            <option value="female" >Female</option>
+            
           {% else  %}
           <option value="female" selected>Female</option>
+          <option value="male" >male</option>
           {% endif %}
+          
         </select>
       </div>
       <div class="col" >
@@ -165,8 +169,8 @@
           <input type="checkbox" checked name="is_pragnant" id="is_pragnant" value="{{animal.is_pragnent}}">
         {% else %}
           <input type="checkbox"  name="is_pragnant" id="is_pragnant" value="{{animal.is_pragnent}}">
+          {% endif %}
           <input type="text"  name="pragnant_val" id="pragnant_val" value="0" hidden>
-        {% endif %}
       </div>
     </div>
 
@@ -177,7 +181,7 @@
       </div>
       <div  class="col">
         <label class=" control-label" >Pregnancy Start Date :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="date" class="form-control"  name="pragnancy_start_date"  value="{{animal.pragnancy_start_date|date:'Y-m-d'}}">
+        <input type="date" class="form-control"  name="pragnancy_start_date" id="pragnancy_start_date"  value="{{animal.pragnancy_start_date|date:'Y-m-d'}}">
       </div>
       <div class="col" >
       </div>
@@ -209,7 +213,6 @@
   </form>
 </div>
           
-      {% endblock content %}
 
 
 
@@ -219,7 +222,7 @@
           
   
           
-  
+          
           $("#status").on('click',function(){
             var status = $("#status").val();
             if ($("#status").is(':checked')) {
@@ -229,37 +232,43 @@
             }
           })
   
+
+
           // 
           $("#is_pragnant").on('click',function(){
             var is_pragnant = $("#is_pragnant").val();
             // alert(is_pragnent)
-  
+            
             if($('#is_pragnant').is(":checked")){
+            
               $("#pragnant_val").val(1);
                 $("#hiddenFields").show();
-            } else{
+              } else{
               $("#pragnant_val").val(0);
               $("#hiddenFields").hide();
             }
-                
+            
                 
         });
-  
-  
-        });
-  
-        function changeDropdown(){ 
-         
-          var state=document.getElementById("gender").value;
-          if(state == "male")
-          {
+        
+        
+      });
+      
+      function changeDropdown(){ 
+        
+        var state=document.getElementById("gender").value;
+        if(state == "male")
+        {
             document.getElementById("hiddenFields1").style.visibility="hidden";
+           
           }
           else
           {
             document.getElementById("hiddenFields1").style.visibility="visible";
           }
         }
-    </script>  
+      </script>  
+     
+      {% endblock content %}
 </body>
 </html>
