--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -102,7 +102,7 @@
         <input type="text" class="form-control" id="color" name="color"  >
       </div>
       <div class="col">
-        <label class=" control-label">Weight :</label>
+        <label class=" control-label">Weight(KG):</label>
         <input type="text" class="form-control" id="weight" name="weight"  >
       </div>
     </div>
