--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -93,7 +93,7 @@
       <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
         <input type="text" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly hidden/>
-        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" >
+        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" readonly>
       </div>
       <div class="col">
           <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
